# NMRC-practicals-2026

./: 0_getting_started.ipynb  1_single_neuron.ipynb  2_neurons_as_logic_gates.ipynb  3_training_a_perceptron.ipynb  4_training_neural_networks.ipynb  5_reinforcement_learning.ipynb  6_the_hopfield_network.ipynb  README.md  pyproject.toml  utils.py  utils_assignment_3.py  utils_assignment_4.py  utils_assignment_6.py
